--- a/index.html
+++ b/index.html
@@ -40,7 +40,6 @@
                     <li><a href="#services">SERVICES</a></li>
                     <li><a href="#lookbook">LOOKBOOK</a></li>
                     <li><a href="#contact">CONTACT</a></li>
-                    <li><a href="#">- BOOK ONLINE</a></li>
                     <!--with border -->
                 </ul>
             </nav>
@@ -48,7 +47,7 @@
         <main id="home">
             <section>
                 <h1>BRAID'S BY IBBY</h1>
-                <p>DIVIDE YOUR UNIQUENESS BY YOUR HAIRS IN TYLE</p>
+                <p>DIVIDE YOUR UNIQUENESS BY YOUR HAIRS IN STYLE</p>
                 <a class="ourServicesMain" href="#">- OUR SERVICES</a>
                 <section class="firstVisitorsDiscount">
                     <h3>YOUR FIRST VISIT ?</h3>
@@ -68,18 +67,18 @@
         <section id="services" class="services">
             <section class="servicesIndividual">
                 <img src="./assets/icons8-hairdresser-64.png" alt="beautician">
-                <h3>EXPERT BEAUTICIANS</h3>
-                <p>Beauty experts dolor sit amet consectetur adipisicing elit.</p>
+                <h3>EXPERT BEAUTICIAN</h3>
+                <p>Skilled in hairstyling and makeup, beautician enhance your natural beauty with personalize treatment and the latest techniques. Trust us to help you look and feel your best.</p>
             </section>
             <section class="servicesIndividual">
                 <img src="./assets/icons8-barber-chair-64.png" alt="salon chair">
                 <h3>QUALITY SERVICES</h3>
-                <p>Hair styling sit amet consectetur adipisicing elit. Omnis quam eius a pariatur.</p>
+                <p>Exceptional care, top-notch products, from sleek styles to bold braids and the results you will love because you deserve the best.</p>
             </section>
             <section class="servicesIndividual">
                 <img src="./assets/icons8-grocery-shelf-64.png" alt="beauty products">
                 <h3>BEAUTY PRODUCTS</h3>
-                <p>Hair color products sit amet consectetur adipisicing elit and beauty interdium.</p>
+                <p>Glow with confidence using beauty products made to nourish, protect, and enhance you.</p>
             </section>
         </section>
 
@@ -101,7 +100,7 @@
                                         <figure class="wgh-slider-item-figure"><img
                                                 class="wgh-slider-item-figure__image" src="assets/03.png"
                                                 alt="The 5th Exotic" />
-                                            <figcaption class="wgh-slider-item-figure__caption"><a href="#">Boho braids
+                                            <figcaption class="wgh-slider-item-figure__caption"><a href="#">Boho Braids
                                                     </a><span>Services</span></figcaption>
                                         </figure>
                                         <label class="wgh-slider-item__trigger" for="slide-1"
@@ -125,8 +124,8 @@
                                         <figure class="wgh-slider-item-figure"><img
                                                 class="wgh-slider-item-figure__image" src="assets/01.png"
                                                 alt="The 5th Exotic" />
-                                            <figcaption class="wgh-slider-item-figure__caption"><a href="#">Fashion Hair
-                                                    Color</a><span>Services</span></figcaption>
+                                            <figcaption class="wgh-slider-item-figure__caption"><a href="#">Knotless Braids
+                                                    </a><span>Services</span></figcaption>
                                         </figure>
                                         <label class="wgh-slider-item__trigger" for="slide-3"
                                             title="Show product 3"></label>
@@ -149,8 +148,8 @@
                                         <figure class="wgh-slider-item-figure"><img
                                                 class="wgh-slider-item-figure__image" src="assets/05.png"
                                                 alt="RYSY - Traveler LP" />
-                                            <figcaption class="wgh-slider-item-figure__caption"><a href="#">Hair
-                                                    Spa</a><span>Services</span></figcaption>
+                                            <figcaption class="wgh-slider-item-figure__caption"><a href="#">Fashion Hair
+                                                    Colour</a><span>Services</span></figcaption>
                                         </figure>
                                         <label class="wgh-slider-item__trigger" for="slide-5"
                                             title="Show product 5"></label>
@@ -170,7 +169,7 @@
                 <h3>OUR CARE</h3>
                 <ul class="ourCareUl">
                     <li><a href="#">Hair braiding</a></li>
-                    <li><a href="#">Haircuts Coloring</a></li>
+                    <li><a href="#">Hair Coloring</a></li>
                     <li><a href="#">Haircuts Extensions</a></li>
                     <li><a href="#">Formal Hair Styling</a></li>
                     <li><a href="#">Bang/Neck Trims</a></li>
