--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
     <body>
         <header>
             <nav>
-                <img src="./assets/navlogo.png" alt="Hair icon with text Braided Beauty" class="imageFull">
+                <!--<img src="./assets/navlogo.png" alt="Hair icon with text Braided Beauty" class="imageFull">-->
                 <input id="menu-toggle" type="checkbox" />
                 <label class='menu-button-container' for="menu-toggle">
                     <div class='menu-button'></div>
@@ -48,12 +48,6 @@
             <section>
                 <h1>BRAID'S BY IBBY</h1>
                 <p>DIVIDE YOUR UNIQUENESS BY YOUR HAIRS IN STYLE</p>
-                <a class="ourServicesMain" href="#">- OUR SERVICES</a>
-                <section class="firstVisitorsDiscount">
-                    <h3>YOUR FIRST VISIT ?</h3>
-                    <p> <span>-20%</span> FOR THE FIRST CLASSIC HAIR COLORING</p>
-                    <a href="#">- BOOK ONLINE </a>
-                </section>
             </section>
         </main>
 
@@ -61,7 +55,6 @@
             <h3>About Us</h3>
             <h1>Your Hair Is Our Priority</h1>
             <p>We provide the best hair styling experience that guarantees to make you look more beautiful</p>
-            <a class="links" href="#">Learn More</a>
         </section>
 
         <section id="services" class="services">
