--- a/index.html
+++ b/index.html
@@ -54,7 +54,8 @@
         <section id="about" class="aboutUs">
             <h3>About Us</h3>
             <h1>Your Hair Is Our Priority</h1>
-            <p>We provide the best hair styling experience that guarantees to make you look more beautiful</p>
+            <p>At Braid's by IBBY, we believe that every person deserves to feel radiant, empowered, and authentically beautiful. Our salon is not just a place to get your hair done. it's a space where creativity, culture, and confidence blend together. With expert hands and a keen eye for detail, we offer a range of professional hairstyling services from intricate braiding to flawless weaves and vibrant color transformations. We tailor each style to celebrate your individuality and lifestyle.Using premium beauty products and the latest techniques, we ensure a salon experience that is both relaxing and empowering. Whether you're preparing for a special event or just want a fresh look, we're here to help you express your true self — beautifully and boldly. </p> 
+            <p>Let your hair tell your story. Let Braid's by IBBY be the artist</p>
         </section>
 
         <section id="services" class="services">
