--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
         <main id="home">
             <section>
                 <h1>BRAID'S BY IBBY</h1>
-                <p>DIVIDE YOUR UNIQUENESS BY YOUR HAIRS IN STYLE</p>
+                <p>Redefining Beauty, One Braid at a Time Where Your Uniqueness Meets Our Craftsmanship Style That Speaks — Confidence That Lasts</p>
             </section>
         </main>
 
