--- a/index.html
+++ b/index.html
@@ -118,7 +118,7 @@
                                         <figure class="wgh-slider-item-figure"><img
                                                 class="wgh-slider-item-figure__image" src="assets/01.png"
                                                 alt="The 5th Exotic" />
-                                            <figcaption class="wgh-slider-item-figure__caption"><a href="#">Knotless Braids
+                                            <figcaption class="wgh-slider-item-figure__caption"><a href="#">Hair Spa Services
                                                     </a><span>Services</span></figcaption>
                                         </figure>
                                         <label class="wgh-slider-item__trigger" for="slide-3"
